--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.brigido</groupId>
 	<artifactId>pizzaria</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>pizzaria</name>
 	<description>Demo project for Pizzaria Estrela</description>
 	<url/>
@@ -74,7 +74,6 @@
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
 			<version>2.6.0</version>
 		</dependency>
-
 	</dependencies>
 	<build>
 		<plugins>
